<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pc.rcycler.StartFragment"

    android:id="@+id/content_sign_in_or_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:weightSum="5"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:srcCompat="@drawable/logoto" />
    <!--<ProgressBar-->
    <!--style="@style/Base.Widget.AppCompat.ProgressBar"-->
    <!--android:id="@+id/progress"-->
    <!--android:visibility="invisible"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:indeterminate="true" />-->
    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/back"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:textColor="@android:color/white"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/signIn"
                android:background="#8BC34A"

                android:layout_marginBottom="82dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <android.support.v7.widget.AppCompatButton
                android:text="@string/register"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="16dp"
                android:id="@+id/register_btn"
                android:background="#8BC34A"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/login_btn"
                android:layout_alignStart="@+id/login_btn" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tv_enterDirectly"
                android:text="@string/tv_enterDirectly"

                android:textSize="14sp"
                android:textColor="@color/colorLightGreen"
                android:layout_marginRight="16dp"
                android:layout_alignBottom="@+id/register_btn"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp" />


        </RelativeLayout>

    </FrameLayout>
</LinearLayout>
