<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.example.pc.rcycler.info_list">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/blue_layout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:id="@+id/blueCircle"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="16dp"
                        app:srcCompat="@drawable/blue" />

                    <TextView
                        android:id="@+id/tv_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/blueCircle"

                        android:text="@string/why_to_recycle"
                        android:textColor="@color/colorLightBlue"

                        android:textSize="14sp"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/green_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
            <ImageView
                android:id="@+id/greenCircle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/description_green"
                app:srcCompat="@drawable/green" />

            <TextView
                android:id="@+id/tv_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/greenCircle"
                android:gravity="center_vertical|center_horizontal|center"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/how_to_recycle"
                android:textColor="@color/colorLightGreen"
                android:textIsSelectable="false"
                android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/yellow_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
            <ImageView
                android:id="@+id/yellowCircle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/yellow" />

            <TextView
                android:id="@+id/tv_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/yellowCircle"
                android:text="@string/int_about_recycling"
                android:gravity="center_vertical|center_horizontal|center"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorLightYellow"
                android:textIsSelectable="false"
                android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:alpha="0.5"
        android:background="@drawable/back">



    </FrameLayout>
</LinearLayout>


