<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:srcCompat="@drawable/logoto" />
    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/back"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/email_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout
                android:layout_centerInParent="true"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:hint="@string/email"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="80dp">

                <EditText
                    android:hint="@string/password"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <!--<TextView-->
            <!--android:id="@+id/tv_enterDirectly"-->
            <!--android:textColor="@color/colorLightGreen"-->
            <!--android:text="@string/tv_enterDirectly"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_marginBottom="36dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:gravity="bottom"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--/>-->

            <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/btn_login"-->
            <!--android:text="OK"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginRight="18dp"-->
            <!--android:layout_marginEnd="18dp"-->
            <!--android:background="@color/colorLightGreen"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true" />-->
            <ImageView
                android:id="@+id/img_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ok_light_green"
                android:layout_marginRight="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/tv_register"
                android:textColor="@color/colorLightGreen"
                android:text="@string/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:gravity="bottom"
                android:layout_alignTop="@+id/img_login"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>


    </FrameLayout>


</LinearLayout>